backend: usecase and http API
